19) Fix show gateway in wan config after VPN up.<br>
20) Add AP2040Rescan variable allows to scan forcedly a state of an ether after a configuration of radio of the unit in AP mode.<br>
21) Dnsmasq start as nobody for more secure and fix some buggy situation.<br>
22) Add check symbols in admin password and login.<br>
23) Some cleanup and optimize init scripts.<br>
24) init.d now log to syslog.<br>
25) Boot speedup and save memory at first stage.<br>
26) Fix SoftwareFastpath not enable in Complex offload mode. Is regression.<br>

<br>
<b>1.7.x</b><br>
1) Add initial RT3662/RT3883 + RT309x support.<br>
2) Wi-Fi coexistence now disable per default. (variable HT_BSSCoexistence 0/1<br>
3) Add HT_BSSCoexApCntThr variable to install manually a switch-off threshold 40MHz mode wifi. If AP on air > HT_BSSCoexApCntThr.<br>
4) Some init scrips more correct use some variable.<br>
5) Do not send multicast and broadcast to PPE. Workaround for work IpTv in some configuration. Use CONFIG_RA_HW_NAT_SAFE for build.<br>
6) Only packet has valid ethernet adress need send to PPE. Need for correct track uncknown sessions. Use CONFIG_RA_HW_NAT_SAFE for build.<br>
7) Smal fix in memory size autodetect.<br>
8) Fix xfrm build.<br>
9) Backport some fixes from vanilla kernel.<br>
10) Add config target for USB 2T2R devices at 8Mb Flash.<br>
11) Try fix regression for Asus RT-32G rev b1.<br>
12) Update HW_NAT code to 0.9 version.<br>
13) Fix send error in raeth (decrease tx timeout).<br>
14) Optimize service restart script for speedup.<br>
15) Correct some defaults for WDS mode.<br>

<br><br>
<b>For support see:</b><br>
<a href="http://acorp.ru">acorp.ru - Acorp Electronics Inc.</a><br>
<a href="http://ddixlab.ru">ddixlab.ru - Laboratory of built in systems.
</a><br>
<br><br>
<b>News and changes in Russian:</b><br>
<a href="http://sadnet.ru">sadnet.ru - Development opensource routers firmware</a><br>
<br><br>
<b>Bug report please send sfstudio[at]mail.ru</b>
<br>
<br>
<br>