@@ -398,6 +398,7 @@
 13) Fix send error in raeth (decrease tx timeout).<br>
 14) Optimize service restart script for speedup.<br>
 15) Correct some defaults for WDS mode.<br>
+16) Add vpnService variabe to select PPPOE service name to connect. (Need add in webui only PPPOE mode).<br>
 
 <br><br>
 <b>For support see:</b><br>
